# VocalAlchemy

./: .dockerignore  .env.example  .gitignore  QWEN.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
backend/src/: __init__.py  auth.py  config.py  database.py  main.py  models.py  rate_limiter.py  schemas.py
backend/src/api/: dependencies.py  schemas.py
backend/src/core/: ai_processor.py  audio_splitter.py  pipeline.py
backend/src/infrastructure/: __init__.py  database.py  sql_models.py
backend/src/routers/: analysis.py  users.py
backend/src/services/: __init__.py  ai_pipeline_service.py  analysis_service.py  audio_processing_service.py  audio_processor.py  blob_storage_service.py  exceptions.py  export_service.py  pipeline_prompts.py  prompts.py  shared_services.py  transcript_analyzer.py  transcription_orchestrator_service.py
backend/src/worker/: dependencies.py  main.py  redis.py  tasks.py
frontend/: components.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: ActionPlanTable.tsx  AudioPlayer.tsx  DocumentCard.tsx  FileUpload.jsx  MarkdownDisplay.tsx  PromptSelection.jsx  ResultDisplay.jsx  ResultsDisplay.tsx  StatusDisplay.jsx  StatusDisplay.tsx  UploadForm.tsx  app-sidebar.tsx  login-form.tsx  mode-toggle.tsx  search-form.tsx  site-header.tsx  theme-provider.tsx
src/: config.py  main.py
src/core/: ai_processor.py  gladia_client.py  pipeline.py
static/js/: script.js
templates/: index.html
(+51 files in other folders)
